--- a/tti2sdk/src/main/res/drawable/background_diamond.xml
+++ b/tti2sdk/src/main/res/drawable/background_diamond.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/bronze"/>
+    <solid android:color="@color/diamond"/>
 
-    <stroke android:width="2dp" android:color="@color/bronze"/>
+    <stroke android:width="2dp" android:color="@color/diamond"/>
 
     <corners
         android:topLeftRadius="250dp"
