--- a/tti2sdk/src/main/res/values/color.xml
+++ b/tti2sdk/src/main/res/values/color.xml
@@ -28,11 +28,9 @@
     <color name="brown_light">#CED6A2</color>
     <color name="background_btn_randomize">#F8F8F8</color>
     <color name="background_gray">#F1F1F4</color>
-    <color name="gold">#FDA22A</color>
-    <color name="platinum">#4B6474</color>
-    <color name="diamond">#0A4696</color>
-    <color name="silver">#C0C0C0</color>
-    <color name="bronze">#CD7F32</color>
+    <color name="gold">#FDA22B</color>
+    <color name="platinum">#4B6373</color>
+    <color name="diamond">#094696</color>
     <color name="gradient_first">#DAC084</color>
     <color name="gradient_second">#BEBEBE</color>
     <color name="gradient_third">#D76728</color>
