fix leaderboard title

--- a/tti2sdk/src/main/res/layout/fragment_month.xml
+++ b/tti2sdk/src/main/res/layout/fragment_month.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:background="@color/all_white">
 
     <TextView
         android:id="@+id/labelStatus"
@@ -11,14 +12,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:text="@string/label_your_place"
+        android:text="@string/label_your_place_month"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Your Place"/>
+        tools:text="Your Place this month"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/containerLeaderPlace"
@@ -102,8 +103,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
             android:ellipsize="end"
-            android:maxLines="1"
             android:gravity="center"
+            android:maxLines="1"
             android:textColor="@color/black"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@id/guideCenterHor"
