--- a/tti2sdk/src/main/res/layout/loading_default.xml
+++ b/tti2sdk/src/main/res/layout/loading_default.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@null" >
+    android:background="@null">
 
     <ProgressBar
         android:id="@+id/progressBck"
@@ -14,8 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:indeterminate="false"
-        android:indeterminateTint="@color/all_white"
         android:indeterminateDrawable="@drawable/progress"
+        android:indeterminateTint="@color/all_white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
