--- a/tti2sdk/src/main/res/layout/activity_leaderboard.xml
+++ b/tti2sdk/src/main/res/layout/activity_leaderboard.xml
@@ -95,7 +95,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/containerToolbarBoard"
-        tools:visibility="visible" />
+        tools:visibility="gone" />
 
     <View
         android:id="@+id/lineGray"
