--- a/tti2sdk/src/main/res/layout/activity_missions.xml
+++ b/tti2sdk/src/main/res/layout/activity_missions.xml
@@ -3,12 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.missions.MissionsActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/containerTopButtons"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
+        android:minHeight="56dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -31,10 +33,12 @@
             android:id="@+id/txtProfileLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/telkomsel_batik_sans_bold"
+            android:layout_marginStart="20dp"
+            android:fontFamily="@font/poppins_bold"
+            android:maxLines="1"
             android:text="@string/txt_missions_label"
             android:textColor="@color/blue_dark"
-            android:textSize="24sp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@id/btnBackMissions"
             app:layout_constraintStart_toEndOf="@id/btnBackMissions"
             app:layout_constraintTop_toTopOf="@id/btnBackMissions"/>
@@ -67,8 +71,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
     <ScrollView
         android:id="@+id/scrollMissions"
         android:layout_width="match_parent"
@@ -80,67 +82,91 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/containerTopButtons">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/mainContainerMissions"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <include
-                android:id="@+id/headerDaily"
-                layout="@layout/sub_header_daily" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvDailyCheckup"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/containerDaily"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_margin="4dp"
-                tools:itemCount="3"
-                tools:listitem="@layout/item_line_daily_one"
-                tools:orientation="vertical"/>
+                android:minHeight="200dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-<!--            <include-->
-<!--                android:id="@+id/headerEvents"-->
-<!--                layout="@layout/sub_header_event" />-->
+                <TextView
+                    android:id="@+id/txtDailyTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/telkomsel_batik_sans_regular"
+                    android:text="@string/daily"
+                    android:textColor="@color/black"
+                    android:textSize="24sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="Daily"/>
 
-<!--            <include-->
-<!--                android:id="@+id/eventLineOne"-->
-<!--                layout="@layout/item_line_event_one" />-->
+                <TextView
+                    android:id="@+id/txtDailySubtitle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginEnd="12dp"
+                    android:fontFamily="@font/poppins_regular"
+                    android:textSize="18sp"
+                    android:text="@string/labelDailyMission"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/txtDailyTitle"
+                    tools:text="Daily missions refresh every day"/>
 
-<!--            <include-->
-<!--                android:id="@+id/eventLineTwo"-->
-<!--                layout="@layout/item_line_event_two" />-->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvDailyMissions"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/txtDailySubtitle"
+                    tools:itemCount="4"
+                    tools:listitem="@layout/item_daily"/>
 
-<!--            <include-->
-<!--                android:id="@+id/dailyLineTwo"-->
-<!--                layout="@layout/item_line_daily_two" />-->
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-<!--            <include-->
-<!--                android:id="@+id/dailyLineThree"-->
-<!--                layout="@layout/item_line_daily_three" />-->
-
-<!--            <include-->
-<!--                android:id="@+id/dailyLineFour"-->
-<!--                layout="@layout/item_line_daily_four" />-->
-
-<!--            <include-->
-<!--                android:id="@+id/headerProgress"-->
-<!--                layout="@layout/sub_header_progress" />-->
-
-<!--            <include-->
-<!--                android:id="@+id/progressLineOne"-->
-<!--                layout="@layout/item_line_progress_one" />-->
-
-<!--            <include-->
-<!--                android:id="@+id/headerBoosters"-->
-<!--                layout="@layout/sub_header_boosters" />-->
-
-<!--            <include-->
-<!--                android:id="@+id/boostersLineOne"-->
-<!--                layout="@layout/item_line_booster_one" />-->
-
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
+
+    <LinearLayout
+        android:id="@+id/blankContainer"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/all_white"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/containerTopButtons"
+        tools:visibility="gone" />
+
+    <View
+        android:id="@+id/lineGray"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/line_gray_prizes"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/containerTopButtons" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
