--- a/tti2sdk/src/main/res/layout/item_line_daily_one.xml
+++ b/tti2sdk/src/main/res/layout/item_line_daily_one.xml
@@ -35,26 +35,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:background="@drawable/mark_daily_one" />
 
-        <View
-            android:id="@+id/daily_one_view_mark_two"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:background="@drawable/mark_daily_two" />
+<!--        <View-->
+<!--            android:id="@+id/daily_one_view_mark_two"-->
+<!--            android:layout_width="80dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="3"-->
+<!--            android:background="@drawable/mark_daily_two" />-->
 
     </LinearLayout>
 
     <TextView
         android:id="@+id/daily_one_text_mark"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="4dp"
         android:fontFamily="@font/poppins_bold"
-        android:paddingEnd="40dp"
+        android:paddingEnd="20dp"
         android:paddingBottom="0dp"
         android:text="Daily"
         android:textAlignment="center"
