--- a/tti2sdk/src/main/res/layout/item_daily.xml
+++ b/tti2sdk/src/main/res/layout/item_daily.xml
@@ -50,6 +50,9 @@
         android:layout_width="match_parent"
         android:layout_height="88dp"
         android:background="@drawable/background_line_soft_gray"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
