--- a/tti2sdk/src/main/res/layout/activity_destination.xml
+++ b/tti2sdk/src/main/res/layout/activity_destination.xml
@@ -99,20 +99,25 @@
                     app:layout_constraintTop_toTopOf="parent"/>
 
                 <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
-                    android:id="@+id/dotsCarroussel"
+                    android:id="@+id/dots_indicator"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="32dp"
-                    app:dotsColor="@color/gray_text_disable"
-                    app:dotsCornerRadius="6dp"
-                    app:dotsSize="12dp"
-                    app:dotsSpacing="4dp"
-                    app:dotsWidthFactor="2.5"
                     app:layout_constraintBottom_toBottomOf="@id/carroussel"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:progressMode="true"
-                    app:selectedDotColor="@color/all_white" />
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+<!--                    app:dotsColor="@color/gray_text_disable"-->
+<!--                    app:dotsCornerRadius="6dp"-->
+<!--                    app:dotsSize="12dp"-->
+<!--                    app:dotsSpacing="4dp"-->
+<!--                    app:dotsWidthFactor="2.5"-->
+<!--                    app:layout_constraintBottom_toBottomOf="@id/carroussel"-->
+<!--                    app:layout_constraintEnd_toEndOf="parent"-->
+<!--                    app:layout_constraintStart_toStartOf="parent"-->
+<!--                    app:progressMode="true"-->
+<!--                    app:selectedDotColor="@color/all_white"-->
+<!--                    />-->
 
                 <TextView
                     android:id="@+id/txtId"
