--- a/tti2sdk/src/main/res/layout/activity_onboarding.xml
+++ b/tti2sdk/src/main/res/layout/activity_onboarding.xml
@@ -194,17 +194,17 @@
             android:id="@+id/dots_indicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:dotsColor="@color/gray_text_disable"
-            app:dotsCornerRadius="6dp"
-            app:dotsSize="12dp"
-            app:dotsSpacing="4dp"
-            app:dotsWidthFactor="2.5"
-            app:selectedDotColor="@color/all_white"
-            app:progressMode="true"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/helpViewPager"
-            android:layout_marginTop="8dp" />
+            app:layout_constraintTop_toBottomOf="@id/helpViewPager" />
+<!--            app:dotsColor="@color/gray_text_disable"-->
+<!--            app:dotsCornerRadius="6dp"-->
+<!--            app:dotsSize="12dp"-->
+<!--            app:dotsSpacing="4dp"-->
+<!--            app:dotsWidthFactor="2.5"-->
+<!--            app:selectedDotColor="@color/all_white"-->
+<!--            app:progressMode="true"-->
+<!--            android:layout_marginTop="8dp" />-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
