--- a/tti2sdk/src/main/res/layout/activity_destination.xml
+++ b/tti2sdk/src/main/res/layout/activity_destination.xml
@@ -98,21 +98,19 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
 
-                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
+                <com.google.android.material.tabs.TabLayout
                     android:id="@+id/dotsCarroussel"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
                     android:layout_marginBottom="32dp"
-                    app:dotsColor="@color/gray_text_disable"
-                    app:dotsCornerRadius="6dp"
-                    app:dotsSize="12dp"
-                    app:dotsSpacing="4dp"
-                    app:dotsWidthFactor="2.5"
+                    app:tabBackground="@drawable/tab_selector"
+                    app:tabGravity="center"
+                    app:tabIndicatorHeight="0dp"
                     app:layout_constraintBottom_toBottomOf="@id/carroussel"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:progressMode="true"
-                    app:selectedDotColor="@color/all_white" />
+                    android:layout_marginTop="4dp" />
 
                 <TextView
                     android:id="@+id/txtId"
