--- a/tti2sdk/src/main/res/layout/fragment_shoes.xml
+++ b/tti2sdk/src/main/res/layout/fragment_shoes.xml
@@ -30,7 +30,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewShoes"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:orientation="horizontal"
             app:layoutManager="LinearLayoutManager"
@@ -38,12 +38,12 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewNameList"
-            tools:listitem="@layout/item_list_avatar" />
+            tools:listitem="@layout/item_list_avatar_generic" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewShoesColor"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:orientation="horizontal"
             app:layoutManager="LinearLayoutManager"
@@ -51,7 +51,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recyclerViewShoes"
-            tools:listitem="@layout/item_list_avatar" />
+            tools:listitem="@layout/item_list_avatar_generic" />
 
         <LinearLayout
             android:id="@+id/containerButtom"
