--- a/tti2sdk/src/main/res/layout/activity_avatar.xml
+++ b/tti2sdk/src/main/res/layout/activity_avatar.xml
@@ -7,27 +7,29 @@
     android:layout_height="match_parent"
     android:background="@color/background_gray">
 
-   <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/loadingBox"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:background="#34000000"
-        android:visibility="gone"
         android:clickable="false"
         android:elevation="10dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/containerTabs"
+        app:layout_constraintTop_toBottomOf="@+id/containerTopButtons"
         tools:visibility="visible">
 
-       <include
-           android:id="@+id/progressBar"
-           layout="@layout/loading_default"
-           android:layout_width="68dp"
-           android:layout_height="68dp"
-           app:layout_constraintBottom_toBottomOf="parent"
-           app:layout_constraintEnd_toEndOf="parent"
-           app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintTop_toTopOf="parent" />
+        <include
+            android:id="@+id/progressBar"
+            layout="@layout/loading_default"
+            android:layout_width="68dp"
+            android:layout_height="68dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-   </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/containerTopButtons"
@@ -60,9 +62,9 @@
             android:textColor="@color/blue_dark"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@id/btnBackAvatar"
-            app:layout_constraintEnd_toStartOf="@id/btnShareAvatar"
-            app:layout_constraintStart_toEndOf="@id/btnBackAvatar"
-            app:layout_constraintTop_toTopOf="@id/btnBackAvatar"/>
+            app:layout_constraintEnd_toEndOf="@+id/btnSaveAvatar"
+            app:layout_constraintStart_toStartOf="@+id/btnBackAvatar"
+            app:layout_constraintTop_toTopOf="@id/btnBackAvatar" />
 
         <ImageView
             android:id="@+id/btnShareAvatar"
