--- a/tti2sdk/src/main/res/layout/fragment_head.xml
+++ b/tti2sdk/src/main/res/layout/fragment_head.xml
@@ -41,10 +41,11 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewNameAvatar"
             tools:text="Diah Sinurat" />
+
         <TextView
             android:id="@+id/editTextCount"
             android:layout_width="0dp"
-            android:layout_height="49dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="15dp"
             android:fontFamily="@font/poppins_regular"
             android:maxLength="64"
@@ -61,6 +62,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="15dp"
             android:fontFamily="@font/poppins_bold"
             android:text="@string/gender"
@@ -74,7 +76,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewGender"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:orientation="horizontal"
             app:layoutManager="LinearLayoutManager"
@@ -116,7 +118,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewSkinColor"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:orientation="horizontal"
             app:layoutManager="LinearLayoutManager"
@@ -146,7 +148,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewHair"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:orientation="horizontal"
             app:layoutManager="LinearLayoutManager"
@@ -158,7 +160,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewColorHair"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:orientation="horizontal"
             app:layoutManager="LinearLayoutManager"
@@ -183,10 +185,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recyclerViewColorHair" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewEyeColor"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:orientation="horizontal"
             app:layoutManager="LinearLayoutManager"
@@ -211,10 +214,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recyclerViewEyeColor" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewEyebrows"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:orientation="horizontal"
             app:layoutManager="LinearLayoutManager"
