--- a/tti2sdk/src/main/res/layout/fragment_ride.xml
+++ b/tti2sdk/src/main/res/layout/fragment_ride.xml
@@ -38,12 +38,12 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewNameList"
-            tools:listitem="@layout/item_list_avatar" />
+            tools:listitem="@layout/item_list_avatar_generic" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewRidesColor"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:orientation="horizontal"
             app:layoutManager="LinearLayoutManager"
@@ -51,7 +51,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recyclerViewRides"
-            tools:listitem="@layout/item_list_avatar" />
+            tools:listitem="@layout/item_list_avatar_generic" />
 
         <LinearLayout
             android:id="@+id/containerButtom"
