--- a/tti2sdk/src/main/res/layout/item_list_avatar_all.xml
+++ b/tti2sdk/src/main/res/layout/item_list_avatar_all.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="110dp"
-    android:background="@null"
-    android:layout_margin="5dp">
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="110dp"
+android:background="@null"
+android:layout_margin="5dp">
 
     <include
-        android:id="@+id/progressBarItemAvatar"
+        android:id="@+id/progressBarItemCuston"
         layout="@layout/loading_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -23,40 +23,28 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
-        android:id="@+id/backgroundItemListAvatar"
+        android:id="@+id/backgroundItemListGeneric"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="5dp"
         android:background="@drawable/bck_item_list_avatar_selected"
-        app:layout_constraintBottom_toTopOf="@+id/textViewAvatarSelected"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageViewItemAvatarSelected"
+        android:id="@+id/imageViewItemGeneric"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="5dp"
-        app:layout_constraintBottom_toBottomOf="@+id/backgroundItemListAvatar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal"
+        android:weightSum="5"
+        app:layout_constraintBottom_toBottomOf="@+id/backgroundItemListGeneric"
+        app:layout_constraintEnd_toEndOf="@+id/backgroundItemListGeneric"
+        app:layout_constraintStart_toStartOf="@+id/backgroundItemListGeneric"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textViewAvatarSelected"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_bold"
-        android:lines="1"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="@dimen/fifteen_sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
