--- a/tti2sdk/src/main/res/layout/item_daily.xml
+++ b/tti2sdk/src/main/res/layout/item_daily.xml
@@ -59,7 +59,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/txtMarkDaily"
+        android:id="@+id/txtFlag1"
         android:layout_width="wrap_content"
         android:layout_height="26dp"
         android:background="@drawable/background_card_city_number"
@@ -77,7 +77,7 @@
         tools:text="Daily"/>
 
     <TextView
-        android:id="@+id/txtMarkTier"
+        android:id="@+id/txtFlag2"
         android:layout_width="wrap_content"
         android:layout_height="26dp"
         android:layout_marginStart="-4dp"
@@ -92,7 +92,28 @@
         android:textColor="@color/all_white"
         android:textSize="14sp"
         android:visibility="gone"
-        app:layout_constraintStart_toEndOf="@id/txtMarkDaily"
+        app:layout_constraintStart_toEndOf="@id/txtFlag1"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Gold Tier"
+        tools:visibility="visible"/>
+
+    <TextView
+        android:id="@+id/txtFlag3"
+        android:layout_width="wrap_content"
+        android:layout_height="26dp"
+        android:layout_marginStart="-4dp"
+        android:background="@drawable/background_tier_gold"
+        android:fontFamily="@font/poppins_regular"
+        android:foregroundGravity="center"
+        android:gravity="center"
+        android:paddingStart="18dp"
+        android:paddingEnd="18dp"
+        android:text="@string/tier_gold"
+        android:textAlignment="center"
+        android:textColor="@color/all_white"
+        android:textSize="14sp"
+        android:visibility="gone"
+        app:layout_constraintStart_toEndOf="@id/txtFlag2"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Gold Tier"
         tools:visibility="visible"/>
