--- a/tti2sdk/src/main/res/values/color.xml
+++ b/tti2sdk/src/main/res/values/color.xml
@@ -25,12 +25,14 @@
     <color name="green">#008E53</color>
     <color name="yellow_warning">#D9801F</color>
     <color name="red_default">#FF0025</color>
+    <color name="red_soft">#FDDDD4</color>
     <color name="brown_light">#CED6A2</color>
     <color name="background_btn_randomize">#F8F8F8</color>
     <color name="background_gray">#F1F1F4</color>
     <color name="gold">#FDA22B</color>
     <color name="platinum">#4B6373</color>
     <color name="diamond">#094696</color>
+    <color name="silver">#B3BAC6</color>
     <color name="gradient_first">#DAC084</color>
     <color name="gradient_second">#BEBEBE</color>
     <color name="gradient_third">#D76728</color>
